--- a/nextjs/Makefile
+++ b/nextjs/Makefile
@@ -5,16 +5,16 @@ DEVEL_UID   := $(shell id -u)
 DEVEL_GROUP := $(shell id -gn)
 DEVEL_GID   := $(shell id -g)
 
-devel:
+create_env:
 	sudo docker container run -it --rm \
-		-v ${PWD}/app:/app \
-		-v /app/node_modules \
-		-w /app \
+		-v ${PWD}/pkg:/project/pkg \
+		-v /project/pkg/node_modules \
+		-w /project/pkg \
 		-u root \
 		${NODE_IMAGE} /bin/bash -c "\
 		    groupadd -g ${DEVEL_GID} ${DEVEL_GROUP} \
 		    && useradd -g ${DEVEL_GID} -u ${DEVEL_UID} -m -s /bin/bash ${DEVEL_USER} \
-		    && chown -R ${DEVEL_USER}:${DEVEL_GROUP} /app/node_modules \
+		    && chown -R ${DEVEL_USER}:${DEVEL_GROUP} /project/pkg/node_modules \
 		    && su ${DEVEL_USER} \
 		"
 
